# hydro-script

./: .gitignore  CLAUDE.md  README.md  controls.py  justfile  pyproject.toml
.github/workflows/: ci.yml
server/app/: aqualink.py  cache.py  cli.py  controls.py  errors.py  main.py  poller.py
server/tests/: conftest.py  test_aqualink.py  test_cache.py  test_controls.py  test_errors.py  test_poller.py
